# HaLVM

./: .gitignore  .gitmodules  CHANGELOG.md  HACKING.md  HaLVMv3.cabal  LICENSE  Makefile  README  README.md  autoconf.mk.in  configure.ac  default.nix  platform-ghc.mk  release.nix  rumpkernel.mk  stack.yaml
HALVMCore/: .gitignore  HALVMCore.cabal  musl_syscall_table.txt
HALVMCore/src/HaLVM/: Console.hsig  FileDescriptors.hs  NetworkCalls.hs  NetworkStack.hsig
HALVMCore/src/HaLVM/NetworkCalls/: TH.hs
HALVMCore/src/HaLVM/POSIX/: Errno.hs  Fcntl.hsc  FileDescriptors.hs  FileSystem.hs  FileSystem.hsc  Hostname.hsc  IOVec.hs  Read.hs  Semaphores.hs  Sockets.hs  Unsupported.hs  Write.hs
HALVMCore/syscalls/: fcntl.c  openat.c
HALVMCore/syscalls/fdmgmt/: dup.c  fcntl.c  fdmgmt.c  ioctl.c  platform_tty_ioctl.c
HALVMCore/syscalls/include/: fdmgmt.h  platform_reqs.h
HALVMCore/syscalls/include/sys/: capability.h
HALVMCore/syscalls/misc/: getdomainname.c  setdomainname.c  uname.c
HALVMCore/syscalls/unsupported/: acct.c  capget.c  capset.c  chroot.c  delete_module.c  execve.c  fork.c  getgroups.c  init_module.c  iopl.c  mknod.c  msgctl.c  msgget.c  msgrcv.c  msgsnd.c  personality.c  pivot_root.c  prctl.c  process_vm_readv.c  process_vm_writev.c  ptrace.c  remap_file_pages.c  setfsgid.c  setfsuid.c  setgroups.c  setns.c  setpgid.c  setsid.c  shmat.c  shmctl.c  shmdt.c  shmget.c  swapoff.c  swapon.c  unshare.c  vhangup.c  wait4.c  waitid.c
HaLVMInterfaces/: .gitignore  HaLVMInterfaces.cabal  LICENSE
HaLVMInterfaces/src/HaLVM/: FileSystem.hsig  NetworkStack.hsig
libraries/BitFiddler/: BitFiddler.cabal
libraries/BitFiddler/BitFiddler/: CompactStruct.hs
libraries/BitFiddler/Data/: ByteOrder.hs
libraries/HALVMCore/: HALVMCore.buildinfo.in  HALVMCore.cabal
libraries/HALVMCore/Communication/: Rendezvous.hs
libraries/HALVMCore/Data/: Word10.hs  Word20.hs
libraries/HALVMCore/Hypervisor/: Basics.hs  BufferChan.hs  Control.hs-boot  Debug.hs  DomainInfo.hs  ErrorCodes.hs  EventWaitSet.hs  IOPorts.hs  Kernel.hs  Memory.hs  Memory.hs-boot  OtherDomain.hs  OtherDomain.hs-boot  Port.hs  Privileged.hsc  StartInfo.hsc  Virqs.hsc  XenStore.hsc
libraries/HALVMCore/Hypervisor/Hypercalls/: PhysicalDevice.hsc  SystemControl.hsc
libraries/HALVMCore/Hypervisor/Structures/: DomainInfo.hsc  PhysicalInfo.hsc  VCPUContext.hsc
libraries/HALVMCore/cbits/: core-hypercalls.c  ghci_stubs.c  privileged.c  start_info.c
libraries/HALVMCore/cbits/include/: domain_info.h  io.h  privileged.h  start_info.h
libraries/RealDevice/: RealDevice.cabal
libraries/RealDevice/Device/: Bits.hs  Keyboard.hs  Screen.hs  Utils.hs
libraries/RealDevice/Device/IDE/: API.hs  Block.hs  (+4 more)
libraries/RendezvousLib/: RendezvousLib.cabal
libraries/RendezvousLib/RendezvousLib/: ClientServer.hs  PeerToPeer.hs
libraries/Testing/: LICENSE  Testing.cabal
libraries/Testing/src/: .ghci  Testing.hs
libraries/XenDevice/: XenDevice.buildinfo.in  XenDevice.cabal
libraries/XenDevice/Communication/: RingBuffer.hs
libraries/XenDevice/XenDevice/: Codecs.hsc  Console.hs  ConsoleInterface.hsc  Disk.hsc  HypervisorConsole.hs  NIC.hsc  PCI.hsc  XenRingState.hs  Xenbus.hsc  XenbusInterface.hsc
libraries/communication/: communication.buildinfo.in  communication.cabal
libraries/communication/Communication/: IVC.hs  RingBuffer.hs
libraries/communication/Data/: HeadTail.hs  PText.hs
libraries/communication/Text/: ReadP.hs
libraries/communication/cbits/: spinlocks.c  spinlocks.h
libraries/libDomainBuilder/: libDomainBuilder.buildinfo.in  libDomainBuilder.cabal
libraries/libDomainBuilder/DomainBuilder/: AllocM.hs  Build.hs  CreateVM.hs  IfaceTypes.hs  LoadElf.hs  ModuleInfo.hsc  PMapEntry.hs  PageMap.hs  Registers.hs  SafePage.hs  SafePage1.hs  StartPage.hsc  Utils.hs
libraries/libDomainBuilder/Elf/: Do.hs  Elf.hs  HOL.hs  IntDef.hs  IntDiv.hs  List.hs  Product_Type.hs  Sum_Type.hs
libraries/log4h/: Log4h.hs  log4h.cabal
patches/ghc/: aclocal.m4  compiler.HsVersions.h  compiler.codeGen.CgProf.hs  compiler.codeGen.CgTicky.hs  compiler.codeGen.StgCmmProf.hs  compiler.codeGen.StgCmmTicky.hs  compiler.ghc.cabal.in  compiler.prelude.primops.txt.pp  config.sub  configure.ac  driver.mangler.ghc-asm.lprl  includes.HaskellConstants.hs  includes.Rts.h  includes.mkDerivedConstants.c  includes.rts.Bytecodes.h  includes.rts.Flags.h  includes.rts.OSThreads.h  includes.rts.storage.ClosureMacros.h  includes.stg.MiscClosures.h  libraries.array.Data.Array.IO.hs  libraries.base.GHC.Conc.lhs  libraries.base.GHC.IO.Encoding.Iconv.hs  libraries.base.GHC.IO.FD.hs  libraries.base.GHC.TopHandler.lhs  libraries.base.System.IO.hs  libraries.base.System.Posix.Internals.hs  libraries.base.aclocal.m4  libraries.base.cbits.PrelIOUtils.c  libraries.base.cbits.inputReady.c  libraries.base.cbits.selectUtils.c  libraries.base.configure  libraries.base.include.HsBase.h  libraries.base3-compat.base.cabal  libraries.ghc-prim.ghc-prim.cabal  libraries.haskell98.haskell98.cabal  libraries.integer-gmp.integer-gmp.cabal  libraries.template-haskell.Language.Haskell.TH.Syntax.hs  libraries.template-haskell.template-haskell.cabal  libraries.time.time.cabal  mk.config.mk.in  (+23 more)
patches/time/: time.cabal
src/HALVMCore/: .gitignore  GNUmakefile  HALVMCore.buildinfo.in  HALVMCore.cabal  ghc.mk  test.hs
src/HALVMCore/Communication/: IVC.hs
src/HALVMCore/Hypervisor/: Console.hsc  Control.hs  Debug.hs  DomainInfo.hs  DomainInfo.hs-boot  ErrorCodes.hs  Hypercalls.hsc  Memory.hs  OtherDomain.hs  Platform.hs  Port.hs  Shutdown.hsc  Virqs.hsc  XenStore.hsc
src/HALVMCore/Util/: WaitSet.hs
src/HALVMCore/cbits/: domain_info.c  io.c
src/HALVMCore/test/: stubs.c  test.cabal  test.hs
src/HaLVMInterfaces/: HaLVMInterfaces.cabal
src/XenDevice/: XenDevice.cabal  ghc.mk
src/XenDevice/Communication/: RingBuffer.hs
src/XenDevice/XenDevice/: ConsoleAux.hs  ConsoleBackend.hs  Disk.hsc  NIC.hsc  PCI.hsc  Xenbus.hsc  XenbusInterface.hsc
src/XenDevice/cbits/: console.c  ghci_stubs.c  xenbus.c
src/XenRaw/: XenRaw.buildinfo.in  XenRaw.cabal  configure.ac
(+747 files in other folders)
