name:                HALVMCore
version:             3.0.0
synopsis:            The very base libraries for working with the HaLVM
description:         The base library for dealing with the underlying
                     capabilities of the HaLVM, including memory management and
                     C runtime.
homepage:            http://halvm.org
license:             BSD3
license-file:        LICENSE
author:              Adam Wick
maintainer:          awick@galois.com
category:            System
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  exposed-modules:     HaLVM.NetworkCalls
  other-modules:       HaLVM.NetworkCalls.TH
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10
  hs-source-dirs:      src

  cc-options:          -Wall -nostdinc
  include-dirs:        syscalls/include/
                       /Users/awick/halvm/halvm3/HaLVM/musl/include
                       /Users/awick/halvm/halvm3/HaLVM/musl/obj/include
                       /Users/awick/halvm/halvm3/HaLVM/musl/arch/halvm
                       /Users/awick/halvm/halvm3/HaLVM/musl/arch/generic
  c-sources:
                       -- implementations of Linux kernel functions we don't
                       -- support in the HaLVM, and just return ENOSYS (or
                       -- similar) with.
                       syscalls/unsupported/msgctl.c
                       syscalls/unsupported/msgget.c
                       syscalls/unsupported/msgrcv.c
                       syscalls/unsupported/msgsnd.c
                       syscalls/unsupported/shmat.c
                       syscalls/unsupported/shmctl.c
                       syscalls/unsupported/shmdt.c
                       syscalls/unsupported/shmget.c
                       syscalls/unsupported/capset.c
                       syscalls/unsupported/capget.c
                       syscalls/unsupported/chroot.c
                       syscalls/unsupported/iopl.c
                       syscalls/unsupported/init_module.c
                       syscalls/unsupported/delete_module.c
                       syscalls/unsupported/personality.c
                       syscalls/unsupported/pivot_root.c
                       syscalls/unsupported/prctl.c
                       syscalls/unsupported/process_vm_writev.c
                       syscalls/unsupported/process_vm_readv.c
                       syscalls/unsupported/ptrace.c
                       syscalls/unsupported/remap_file_pages.c
                       syscalls/unsupported/setfsgid.c
                       syscalls/unsupported/setfsuid.c
                       syscalls/unsupported/setgroups.c
                       syscalls/unsupported/setns.c
                       syscalls/unsupported/swapon.c
                       syscalls/unsupported/swapoff.c
                       syscalls/unsupported/unshare.c
                       syscalls/unsupported/vhangup.c
                       syscalls/unsupported/wait4.c
                       syscalls/unsupported/execve.c
                       syscalls/unsupported/fork.c
                       syscalls/unsupported/waitid.c
                       syscalls/unsupported/acct.c
                       syscalls/unsupported/getgroups.c
                       syscalls/unsupported/mknod.c
                       syscalls/unsupported/setpgid.c
                       syscalls/unsupported/setsid.c

                       -- functions required so we can deal with posix file
                       -- descriptors
                       syscalls/fdmgmt/fdmgmt.c
                       syscalls/fdmgmt/fcntl.c
                       syscalls/fdmgmt/dup.c
                       syscalls/fdmgmt/platform_tty_ioctl.c

                       -- a bunch of miscellaneous upcalls
                       syscalls/misc/uname.c
                       syscalls/misc/getdomainname.c
                       syscalls/misc/setdomainname.c
