name:                HALVMCore
version:             3.0.0
synopsis:            The very base libraries for working with the HaLVM
description:         The base library for dealing with the underlying
                     capabilities of the HaLVM, including memory management and
                     C runtime.
homepage:            http://halvm.org
license:             BSD3
license-file:        LICENSE
author:              Adam Wick
maintainer:          awick@galois.com
category:            System
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=2.0

library
  default-language:    Haskell2010
  other-extensions:    MultiWayIf
  other-modules:
                       HaLVM.POSIX.Errno
                       HaLVM.POSIX.Fcntl
                       HaLVM.POSIX.FileDescriptors
                       HaLVM.POSIX.FileSystem
                       HaLVM.POSIX.Hostname
                       HaLVM.POSIX.IOVec
                       HaLVM.POSIX.Read
                       HaLVM.POSIX.Semaphores
                       HaLVM.POSIX.Sockets
                       HaLVM.POSIX.Unsupported
                       HaLVM.POSIX.Write
  c-sources:           syscalls/fcntl.c
                       syscalls/openat.c
  build-depends:
                       array            >= 0.5.2.0  && < 0.7,
                       base             >= 4.10.1.0 && < 4.12,
                       bytestring       >= 0.10.8.2 && < 0.12,
                       HaLVMInterfaces  == 3.0.0
  hs-source-dirs:      src
  ghc-options:         -Wall
  cc-options:          -Wall -nostdinc
  include-dirs:        syscalls/include/
                       ../musl/include
                       ../musl/obj/include
                       ../musl/arch/halvm
                       ../musl/arch/generic
